<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.wlpiaoyi</groupId>
    <artifactId>framework</artifactId>
    <version>1.0.2-BATA-JDK21</version>
    <packaging>pom</packaging>

    <modules>
        <module>utils</module>
        <module>datasource</module>
    </modules>


    <properties>
        <fw.project.version>1.0.2-BATA-JDK21</fw.project.version>
        <junit.version>4.13.2</junit.version>
        <slf4j.version>2.0.13</slf4j.version>
        <lombok.version>1.18.32</lombok.version>
        <java.version>21</java.version>

        <!-- maven -->
        <maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
        <maven-plugin-annotations.version>3.10.2</maven-plugin-annotations.version>
        <maven-jar-plugin.version>3.4.0</maven-jar-plugin.version>
        <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
        <maven-plugin-api.version>3.8.5</maven-plugin-api.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- 数据库 -->
        <mysql-connector-java.version>8.0.33</mysql-connector-java.version>

        <org.jetbrains.annotations.version>23.1.0</org.jetbrains.annotations.version>
        <gson.version>2.10.1</gson.version>
        <cglib.version>3.3.0</cglib.version>
        <apache.http.client.version>4.5.14</apache.http.client.version>
        <apache.tomcat-embed-websocket.version>10.1.20</apache.tomcat-embed-websocket.version>
        <java-websocket.version>1.5.6</java-websocket.version>
        <javax.mail.version>1.6.2</javax.mail.version>
        <skipTests>true</skipTests>

    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- 邮件 -->
            <dependency>
                <groupId>javax.mail</groupId>
                <artifactId>javax.mail-api</artifactId>
                <version>${javax.mail.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sun.mail</groupId>
                <artifactId>javax.mail</artifactId>
                <version>${javax.mail.version}</version>
            </dependency>

            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${gson.version}</version>
            </dependency>
            <dependency>
                <groupId>cglib</groupId>
                <artifactId>cglib</artifactId>
                <version>${cglib.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpclient</artifactId>
                <version>${apache.http.client.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.tomcat.embed</groupId>
                <artifactId>tomcat-embed-websocket</artifactId>
                <version>${apache.tomcat-embed-websocket.version}</version>
            </dependency>
            <dependency>
                <groupId>org.java-websocket</groupId>
                <artifactId>Java-WebSocket</artifactId>
                <version>${java-websocket.version}</version>
<!--                <version>1.3.9</version>-->
            </dependency>
<!--            <dependency>-->
<!--                <groupId>org.bouncycastle</groupId>-->
<!--                <artifactId>bcprov-jdk16</artifactId>-->
<!--                <version>1.46</version>-->
<!--            </dependency>-->
            <dependency>
                <groupId>org.apache.maven</groupId>
                <artifactId>maven-plugin-api</artifactId>
                <version>${maven-plugin-api.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.maven.plugin-tools</groupId>
                <artifactId>maven-plugin-annotations</artifactId>
                <version>${maven-plugin-annotations.version}</version>
            </dependency>
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>${mysql-connector-java.version}</version>
            </dependency>
            <dependency>
                <groupId>org.wlpiaoyi.framework</groupId>
                <artifactId>mybatis-plugin</artifactId>
                <version>${fw.project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.wlpiaoyi.framework</groupId>
                <artifactId>generator-plugin</artifactId>
                <version>${fw.project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.wlpiaoyi.framework</groupId>
                <artifactId>utils</artifactId>
                <version>${fw.project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-log4j12</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>annotations</artifactId>
                <version>${org.jetbrains.annotations.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <!--maven打包-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven-jar-plugin.version}</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>lib/</classpathPrefix>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <!-- JUnit 配置 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <!--忽略测试启动类 -->
                <configuration>
                    <skip>${skipTests}</skip>
                </configuration>
            </plugin>
        </plugins>
        <defaultGoal>compile</defaultGoal>
    </build>
</project>